--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
@@ -32,6 +33,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.0",
     "slugify": "^1.6.5",
+    "stripe": "^10.12.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
